# auto-login

./: .env  .gitignore  AGENTS.md  CLAUDE.md  README.md  config.yaml  pyproject.toml  requirements.txt
.serena/: project.yml
.serena/memories/: project_overview.md  style_conventions.md  suggested_commands.md  task_completion_checklist.md
1/: 登录 · 猪咪云启动器.html  登录 · 猪咪云启动器.tar
1/登录 · 猪咪云启动器_files/: uika-theme.css
anchors/1280x960/channel_select/: roi.json  roi.py
anchors/1280x960/character_select/: roi.json  roi.py
anchors/channel_select/: roi.json
anchors/character_select/: roi.json
anchors/launcher_start_disabled/: roi.json
anchors/launcher_start_enabled/: roi.json  roi.py
anchors/launcher_start_enabled_bak/: roi.json
auto_login/: config.toml  run.py
auto_login/docs/: auto-login_游戏自动登录与签到自动化项目_MVP_软件开发方案.md
auto_login/src/: __init__.py  config.py  evidence.py  flow.py  logger.py
auto_login/tests/: test_launcher.py
docs/: auto-login_实现任务拆分清单.md  auto-login_开发计划.md  auto-login_游戏自动登录与签到自动化项目_MVP_软件开发方案.md  auto-login_状态机说明.md  auto-login_自动登录改造方案.md  auto-login_软件开发方案.md  click-reliability-enhancement-plan.md  launcher_tray_fix_design.md  web-login-in-window-keyboard-design.md  window-offscreen-fix-plan.md
src/: __init__.py  click_ops.py  config.py  evidence.py  logger.py  main.py  ocr_ops.py  process_ops.py  runner.py  scheduler.py  ui.py  ui_ops.py  web_login.py
tests/: test_click_ops.py  test_config.py  test_ocr_ops.py  test_process_ops.py  test_runner_lifecycle.py  test_schedule.py  test_ui_ops.py  test_web_login.py
(+19 files in other folders)
